# Adversaria-AI

./: ARCHITECTURE.md  README.md  test_db.py
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.css  App.tsx  agentEngine.ts  index.css  types.ts
Frontend/src/components/: AgentVisualizer.tsx  BriefForm.tsx  DebatePanel.tsx  EvalDashboard.tsx  RationalePanel.tsx
Frontend/src/layouts/: DashboardLayout.tsx
Frontend/src/pages/: Dashboard.tsx  Login.tsx  PlaceholderPage.tsx
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/adversaria/: __init__.py  config.py  main.py  schemas.py
backend/adversaria/agents/: graph.py  nodes.py
backend/adversaria/api/: routes.py
backend/adversaria/db/: models.py  session.py
backend/adversaria/services/: embeddings.py  generation_router.py  ingestion.py  pubsub.py  tasks.py  vector_store.py
backend/adversaria/workers/: celery_app.py
backend/comfyui_workflows/: flux_inpaint.json  flux_lora_standard.json  sdxl_turbo_draft.json
backend/tests/: conftest.py  test_nodes.py
