[project]
name = "adversaria-ai"
version = "0.1.0"
description = "Adversaria: Adversarial Multi-Agent Creative Engine backend"
requires-python = ">=3.11"
dependencies = [
    # Core framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Async
    "httpx>=0.28.0",
    "anyio>=4.7.0",

    # LangGraph + LangChain
    "langgraph>=0.2.60",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langsmith>=0.2.0",

    # LLM providers
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    # Image generation clients
    "replicate>=0.34.0",          # Flux Pro / Schnell via Replicate
    "fal-client>=0.5.0",          # Flux ultra-fast via fal.ai

    # Pydantic v2
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Vector DB
    "qdrant-client>=1.12.0",

    # Embeddings
    "voyageai>=0.3.0",

    # Database
    "asyncpg>=0.30.0",
    "psycopg[binary,pool]>=3.2.0",
    "alembic>=1.14.0",
    "sqlalchemy[asyncio]>=2.0.36",

    # Cache / Queue
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",

    # File processing
    "Pillow>=11.0.0",
    "cairosvg>=2.7.0",
    "fonttools>=4.54.0",
    "python-magic>=0.4.27",
    "pypdf>=5.0.0",

    # Utilities
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "boto3>=1.35.0",          # S3 / MinIO
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",    # cosine similarity, taste model
    "xgboost>=2.1.0",         # Predicted performance model
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adversaria"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
